--- a/css/style.css
+++ b/css/style.css
@@ -4603,7 +4603,7 @@ textarea {
 }
 
 .imgBox::after {
-    background-color: rgba(0, 0, 0, .2);
+    background-image: linear-gradient(to top, rgba(118, 32, 183, 0.54), rgba(23, 18, 84, 0.54), rgba(32, 33, 35, 0.54));
     content: '';
     position: absolute;
     top: 0;
@@ -4632,10 +4632,24 @@ textarea {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    position: absolute;
+    z-index: 0;
     width: 100%;
     height: 100%;
     /* p3背景图模糊（图片与图片之间会产生黑边）*/
     /* filter: blur(1px); */
+}
+
+.imgBox .p3_img:after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: inherit;
+    filter: blur(2px);
+    z-index: 1;
 }
 
 .p3_img_1 {
@@ -4796,6 +4810,10 @@ textarea {
         width: 100%;
         object-fit: cover;
         clip: rect(0, 100%, 200px, 0);
+    }
+
+    .imgBox::after {
+        visibility: hidden;
     }
 
     .part3Bottom {
