--- a/css/style.css
+++ b/css/style.css
@@ -4187,6 +4187,22 @@ textarea {
     user-select: none;
 }
 
+
+.decorate3 
+{
+    color: white;
+    font-size: 24px;
+    position: absolute;
+    top: -2px;
+    left: -30px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
+    word-break:break-all;
+}
+
 .part1-mobile-introduce {
     display: none;
 }
